# gns-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  flake.nix  release-plz.toml  update-doc.sh
.github/workflows/: build.yaml  release.yml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
docs/crossbeam_queue/: all.html  index.html  struct.ArrayQueue.html  struct.SegQueue.html
docs/crossbeam_utils/: all.html  index.html  struct.Backoff.html  struct.CachePadded.html
docs/crossbeam_utils/atomic/: index.html  struct.AtomicCell.html  trait.AtomicConsume.html
docs/crossbeam_utils/sync/: index.html  struct.Parker.html  struct.ShardedLock.html  struct.ShardedLockReadGuard.html  struct.ShardedLockWriteGuard.html  struct.Unparker.html  struct.WaitGroup.html
docs/crossbeam_utils/thread/: fn.scope.html  index.html  struct.Scope.html  struct.ScopedJoinHandle.html  struct.ScopedThreadBuilder.html
docs/either/: all.html  enum.Either.html  index.html  macro.for_both.html  macro.try_left.html  macro.try_right.html  struct.IterEither.html  trait.IntoEither.html
docs/example/: all.html  fn.client.html  fn.loop_client_callbacks.html  fn.loop_server_callbacks.html  fn.main.html  fn.server.html  fn.tick_client.html  fn.tick_server.html  fn.user_input.html  fn.wait_for_client_closed.html  fn.wait_for_client_connection.html  fn.wait_for_server_connection.html  index.html  sidebar-items.js
docs/gns/: all.html  enum.GnsConfig.html  index.html  sidebar-items.js  struct.GnsConnection.html  struct.GnsConnectionEvent.html  struct.GnsConnectionInfo.html  struct.GnsConnectionRealTimeLaneStatus.html  struct.GnsConnectionRealTimeStatus.html  struct.GnsError.html  struct.GnsGlobal.html  struct.GnsListenSocket.html  struct.GnsNetworkMessage.html  struct.GnsPollGroup.html  struct.GnsSocket.html  struct.GnsUtils.html  struct.IsClient.html  struct.IsCreated.html  struct.IsServer.html  struct.ToReceive.html  struct.ToSend.html  trait.GnsDroppable.html  trait.IsReady.html  trait.MayDrop.html  type.GnsLane.html  type.GnsLaneId.html  type.GnsMessageNumber.html  type.GnsResult.html  type.Priority.html  type.Weight.html
docs/gns_sys/: all.html  constant.INT16_MAX.html  constant.INT16_MIN.html  constant.INT16_WIDTH.html  constant.INT32_MAX.html  constant.INT32_MIN.html  constant.INT32_WIDTH.html  constant.INT64_WIDTH.html  constant.INT8_MAX.html  constant.INT8_MIN.html  constant.INT8_WIDTH.html  constant.INTMAX_WIDTH.html  constant.INTPTR_MAX.html  constant.INTPTR_MIN.html  constant.INTPTR_WIDTH.html  constant.INT_FAST16_MAX.html  constant.INT_FAST16_MIN.html  constant.INT_FAST16_WIDTH.html  constant.INT_FAST32_MAX.html  constant.INT_FAST32_MIN.html  constant.INT_FAST32_WIDTH.html  constant.INT_FAST64_WIDTH.html  constant.INT_FAST8_MAX.html  constant.INT_FAST8_MIN.html  constant.INT_FAST8_WIDTH.html  constant.INT_LEAST16_MAX.html  constant.INT_LEAST16_MIN.html  constant.INT_LEAST16_WIDTH.html  constant.INT_LEAST32_MAX.html  constant.INT_LEAST32_MIN.html  constant.INT_LEAST32_WIDTH.html  constant.INT_LEAST64_WIDTH.html  constant.INT_LEAST8_MAX.html  constant.INT_LEAST8_MIN.html  constant.INT_LEAST8_WIDTH.html  constant.PTRDIFF_MAX.html  constant.PTRDIFF_MIN.html  constant.PTRDIFF_WIDTH.html  constant.SIG_ATOMIC_MAX.html  constant.SIG_ATOMIC_MIN.html  (+632 more)
docs/gns_sys/bindings/: constant.INT16_MAX.html  constant.INT16_MIN.html  constant.INT16_WIDTH.html  constant.INT32_MAX.html  constant.INT32_MIN.html  constant.INT32_WIDTH.html  constant.INT64_WIDTH.html  constant.INT8_MAX.html  constant.INT8_MIN.html  constant.INT8_WIDTH.html  constant.INTMAX_WIDTH.html  constant.INTPTR_MAX.html  constant.INTPTR_MIN.html  constant.INTPTR_WIDTH.html  constant.INT_FAST16_MAX.html  constant.INT_FAST16_MIN.html  constant.INT_FAST16_WIDTH.html  constant.INT_FAST32_MAX.html  constant.INT_FAST32_MIN.html  constant.INT_FAST32_WIDTH.html  constant.INT_FAST64_WIDTH.html  constant.INT_FAST8_MAX.html  constant.INT_FAST8_MIN.html  constant.INT_FAST8_WIDTH.html  constant.INT_LEAST16_MAX.html  constant.INT_LEAST16_MIN.html  constant.INT_LEAST16_WIDTH.html  constant.INT_LEAST32_MAX.html  constant.INT_LEAST32_MIN.html  constant.INT_LEAST32_WIDTH.html  constant.INT_LEAST64_WIDTH.html  constant.INT_LEAST8_MAX.html  constant.INT_LEAST8_MIN.html  constant.INT_LEAST8_WIDTH.html  constant.PTRDIFF_MAX.html  constant.PTRDIFF_MIN.html  constant.PTRDIFF_WIDTH.html  constant.SIG_ATOMIC_MAX.html  constant.SIG_ATOMIC_MIN.html  constant.SIG_ATOMIC_WIDTH.html  (+615 more)
docs/implementors/gns/: trait.GnsDroppable.js
docs/search.desc/example/: example-desc-0-.js
docs/search.desc/gns/: gns-desc-0-.js
docs/search.desc/gns_sys/: gns_sys-desc-0-.js
docs/src/crossbeam_queue/: array_queue.rs.html  lib.rs.html  seg_queue.rs.html
docs/src/crossbeam_utils/: backoff.rs.html  cache_padded.rs.html  lib.rs.html  thread.rs.html
docs/src/either/: into_either.rs.html  iterator.rs.html  lib.rs.html
docs/src/example/: main.rs.html
docs/src/gns/: lib.rs.html
docs/src/gns_sys/: lib.rs.html
docs/trait.impl/gns/: trait.MayDrop.js
docs/type.impl/gns_sys/: struct.SteamNetworkingMessage_t.js
docs/type.impl/std/: primitive.u32.js
example/: Cargo.toml
example/src/: main.rs
gns/: CHANGELOG.md  Cargo.toml
gns-sys/: CHANGELOG.md  Cargo.toml  build.rs
gns-sys/c_shim/: string_view_cstr_compat.h
gns-sys/src/: bindings.rs  lib.rs
gns/src/: lib.rs
gns/tests/: config_tests.rs  debug_output_tests.rs  integration_tests.rs  lane_tests.rs  message_semantics_tests.rs  receive_into_tests.rs  regression_tests.rs
gns/tests/common/: mod.rs
(+60 files in other folders)
