[package]
name = "example"
version = "0.1.0"
edition = "2021"
description = "Example of a reliable chat server/client based on gns"
license = "MIT / Apache-2.0"
authors = [ "Hussein Ait-Lahcen <hussein@gmail.com> <https://github.com/hussein-aitlahcen>" ]

[dependencies]
gns-sys = { path = "../gns-sys" }
gns = { path = "../gns" }