[package]
name = "gns-sys"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for Valve GameNetworkingSockets library."
license = "MIT / Apache-2.0"
repository = "https://github.com/hussein-aitlahcen/gns-rs"
authors = [ "Hussein Ait-Lahcen <hussein.aitlahcen@gmail.com> <https://github.com/hussein-aitlahcen>" ]
keywords = ["gamedev", "networking", "udp"]
categories = ["games"]

[lib]
crate-type = ["rlib", "staticlib"]

[build-dependencies]
bindgen = "0.70"
cmake = "0.1"
pkg-config = "0.3"
# This is a fork of upstream vcpkg that has the latest master changes actually published to crates.io
vcpkg_rs_mf = "0.3"