[package]
name = "game-networking-sockets-sys"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for Valve GameNetworkingSockets library."
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "gns_sys"
crate-type = ["rlib", "staticlib"]

[build-dependencies]
bindgen = "0.70"
cmake = "0.1"
pkg-config = "0.3"
# This is a fork of upstream vcpkg that has the latest master changes actually published to crates.io
vcpkg_rs_mf = "0.3"