[package]
name = "game-networking-sockets"
version = "0.1.0"
edition = "2021"
description = "Rust abstraction for Valve GameNetworkingSockets library."
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "gns"

[dependencies]
game-networking-sockets-sys = { path = "../gns-sys", version = "0.1" }
crossbeam-queue = "0.3"
either = "1.7"