[package]
name = "game-networking-sockets"
version = "0.2.0"
edition = "2021"
description = "Rust abstraction for Valve GameNetworkingSockets library."
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[lib]
name = "gns"

[dependencies]
game-networking-sockets-sys = { path = "../gns-sys", version = "0.2" }
crossbeam-queue = "0.3"
bitflags = "2"
thiserror = "2"
